# BBH-Wrapper

./: .gitignore  pyproject.toml
config/: config.json  tokens.json  tools_args.json  tools_config.json
src/: __main__.py  main.py  output_processing.py  probe_targets.py  tool_checker.py  tool_runner.py
src/bbh_wrapper/: __main__.py  probe_targets.py
